Updated entrypoint wording

--- a/webapp/channels/src/i18n/en_AU.json
+++ b/webapp/channels/src/i18n/en_AU.json
@@ -4280,7 +4280,7 @@
   "onboardingTask.checklist.main_subtitle": "Let's get up and running.",
   "onboardingTask.checklist.start_enterprise_now": "Start your free Enterprise trial now!",
   "onboardingTask.checklist.task_complete_your_profile": "Complete your profile",
-  "onboardingTask.checklist.task_create_from_work_template": "Create from a template - set up a channel with linked boards and playbooks.",
+  "onboardingTask.checklist.task_create_from_work_template": "Start from a template",
   "onboardingTask.checklist.task_download_mm_apps": "Download the Desktop and Mobile Apps",
   "onboardingTask.checklist.task_explore_other_tools_in_platform": "Explore other tools in the platform.",
   "onboardingTask.checklist.task_invite_team_members": "Invite team members to the workspace",
@@ -4853,8 +4853,8 @@
   "sidebar_left.add_channel_dropdown.dropdownAriaLabel": "Add Channel Dropdown",
   "sidebar_left.add_channel_dropdown.invitePeople": "Invite People",
   "sidebar_left.add_channel_dropdown.invitePeopleExtraText": "Add people to the team",
-  "sidebar_left.add_channel_dropdown.work_template": "Create from a template",
-  "sidebar_left.add_channel_dropdown.work_template_extra": "Set up a channel with linked boards, and playbooks",
+  "sidebar_left.add_channel_dropdown.work_template": "Start from a template",
+  "sidebar_left.add_channel_dropdown.work_template_extra": "Link channels, boards, and playbooks together",
   "sidebar_left.channel_filter.filterByUnread": "Filter by unread",
   "sidebar_left.channel_filter.filterUnreadAria": "unreads filter",
   "sidebar_left.channel_filter.showAllChannels": "Show all channels",
