--- a/webapp/boards/i18n/en.json
+++ b/webapp/boards/i18n/en.json
@@ -1,12 +1,14 @@
 {
-  "AppBar.Tooltip": "Toggle linked boards",
+  "AdminBadge.SystemAdmin": "Admin",
+  "AdminBadge.TeamAdmin": "Team Admin",
+  "AppBar.Tooltip": "Toggle Linked Boards",
   "Attachment.Attachment-title": "Attachment",
   "AttachmentBlock.DeleteAction": "delete",
   "AttachmentBlock.addElement": "add {type}",
-  "AttachmentBlock.delete": "Attachment deleted.",
-  "AttachmentBlock.failed": "This file couldn't be uploaded as the file size limit has been reached.",
+  "AttachmentBlock.delete": "Attachment Deleted Successfully.",
+  "AttachmentBlock.failed": "Unable to upload the file. Attachment size limit reached.",
   "AttachmentBlock.upload": "Attachment uploading.",
-  "AttachmentBlock.uploadSuccess": "Attachment uploaded.",
+  "AttachmentBlock.uploadSuccess": "Attachment uploaded successfull.",
   "AttachmentElement.delete-confirmation-dialog-button-text": "Delete",
   "AttachmentElement.download": "Download",
   "AttachmentElement.upload-percentage": "Uploading...({uploadPercent}%)",
@@ -16,7 +18,7 @@
   "BoardComponent.hide": "Hide",
   "BoardComponent.new": "+ New",
   "BoardComponent.no-property": "No {property}",
-  "BoardComponent.no-property-title": "Items with an empty {property} property will go here. This column can't be removed.",
+  "BoardComponent.no-property-title": "Items with an empty {property} property will go here. This column cannot be removed.",
   "BoardComponent.show": "Show",
   "BoardMember.schemeAdmin": "Admin",
   "BoardMember.schemeCommenter": "Commenter",
@@ -27,7 +29,7 @@
   "BoardPage.newVersion": "A new version of Boards is available, click here to reload.",
   "BoardPage.syncFailed": "Board may be deleted or access revoked.",
   "BoardTemplateSelector.add-template": "Create new template",
-  "BoardTemplateSelector.create-empty-board": "Create an empty board",
+  "BoardTemplateSelector.create-empty-board": "Create empty board",
   "BoardTemplateSelector.delete-template": "Delete",
   "BoardTemplateSelector.description": "Add a board to the sidebar using any of the templates defined below or start from scratch.",
   "BoardTemplateSelector.edit-template": "Edit",
@@ -35,7 +37,7 @@
   "BoardTemplateSelector.plugin.no-content-title": "Create a board",
   "BoardTemplateSelector.title": "Create a board",
   "BoardTemplateSelector.use-this-template": "Use this template",
-  "BoardsSwitcher.Title": "Find boards",
+  "BoardsSwitcher.Title": "Find Boards",
   "BoardsUnfurl.Limited": "Additional details are hidden due to the card being archived",
   "BoardsUnfurl.Remainder": "+{remainder} more",
   "BoardsUnfurl.Updated": "Updated {time}",
@@ -88,7 +90,7 @@
   "CardDetail.add-icon": "Add icon",
   "CardDetail.add-property": "+ Add a property",
   "CardDetail.addCardText": "add card text",
-  "CardDetail.limited-body": "Upgrade to our Professional or Enterprise plan.",
+  "CardDetail.limited-body": "Upgrade to our Professional or Enterprise plan to view archived cards, have unlimited views per boards, unlimited cards and more.",
   "CardDetail.limited-button": "Upgrade",
   "CardDetail.limited-title": "This card is hidden",
   "CardDetail.moveContent": "Move card content",
@@ -103,9 +105,9 @@
   "CardDetailProperty.property-deleted": "Deleted {propertyName} successfully!",
   "CardDetailProperty.property-name-change-subtext": "type from \"{oldPropType}\" to \"{newPropType}\"",
   "CardDetial.limited-link": "Learn more about our plans.",
-  "CardDialog.delete-confirmation-dialog-attachment": "Confirm attachment delete",
+  "CardDialog.delete-confirmation-dialog-attachment": "Confirm Attachment delete!",
   "CardDialog.delete-confirmation-dialog-button-text": "Delete",
-  "CardDialog.delete-confirmation-dialog-heading": "Confirm card delete",
+  "CardDialog.delete-confirmation-dialog-heading": "Confirm card delete!",
   "CardDialog.editing-template": "You're editing a template.",
   "CardDialog.nocard": "This card doesn't exist or is inaccessible.",
   "Categories.CreateCategoryDialog.CancelText": "Cancel",
@@ -138,6 +140,7 @@
   "ContentBlock.moveDown": "Move down",
   "ContentBlock.moveUp": "Move up",
   "ContentBlock.text": "text",
+  "DateFilter.empty": "Empty",
   "DateRange.clear": "Clear",
   "DateRange.empty": "Empty",
   "DateRange.endDate": "End date",
@@ -156,10 +159,14 @@
   "Filter.ends-with": "ends with",
   "Filter.includes": "includes",
   "Filter.is": "is",
+  "Filter.is-after": "is after",
+  "Filter.is-before": "is before",
   "Filter.is-empty": "is empty",
   "Filter.is-not-empty": "is not empty",
   "Filter.is-not-set": "is not set",
   "Filter.is-set": "is set",
+  "Filter.isafter": "is after",
+  "Filter.isbefore": "is before",
   "Filter.not-contains": "doesn't contain",
   "Filter.not-ends-with": "doesn't end with",
   "Filter.not-includes": "doesn't include",
@@ -187,7 +194,7 @@
   "OnboardingTour.AddComments.Title": "Add comments",
   "OnboardingTour.AddDescription.Body": "Add a description to your card so your teammates know what the card is about.",
   "OnboardingTour.AddDescription.Title": "Add description",
-  "OnboardingTour.AddProperties.Body": "Add various properties to cards to make them more powerful.",
+  "OnboardingTour.AddProperties.Body": "Add various properties to cards to make them more powerful!",
   "OnboardingTour.AddProperties.Title": "Add properties",
   "OnboardingTour.AddView.Body": "Go here to create a new view to organise your board using different layouts.",
   "OnboardingTour.AddView.Title": "Add a new view",
@@ -237,22 +244,17 @@
   "ShareBoard.copyLink": "Copy link",
   "ShareBoard.regenerate": "Regenerate token",
   "ShareBoard.searchPlaceholder": "Search for people and channels",
-  "ShareBoard.teamPermissionsText": "Everyone at {teamName} team",
+  "ShareBoard.teamPermissionsText": "Everyone at {teamName} Team",
   "ShareBoard.tokenRegenrated": "Token regenerated",
   "ShareBoard.userPermissionsRemoveMemberText": "Remove member",
   "ShareBoard.userPermissionsYouText": "(You)",
-  "ShareTemplate.Title": "Share template",
+  "ShareTemplate.Title": "Share Template",
   "ShareTemplate.searchPlaceholder": "Search for people",
-  "Sidebar.about": "About Focalboard",
-  "Sidebar.add-board": "+ Add board",
-  "Sidebar.changePassword": "Change password",
   "Sidebar.delete-board": "Delete board",
   "Sidebar.duplicate-board": "Duplicate board",
   "Sidebar.export-archive": "Export archive",
   "Sidebar.import": "Import",
   "Sidebar.import-archive": "Import archive",
-  "Sidebar.invite-users": "Invite users",
-  "Sidebar.logout": "Log out",
   "Sidebar.new-category.badge": "New",
   "Sidebar.new-category.drag-boards-cta": "Drag boards here...",
   "Sidebar.no-boards-in-category": "No boards inside",
@@ -277,8 +279,8 @@
   "SidebarTour.SidebarCategories.Body": "All your boards are now organized under your new sidebar. No more switching between workspaces. One-time custom categories based on your prior workspaces may have automatically been created for you as part of your v7.2 upgrade. These can be removed or edited to your preference.",
   "SidebarTour.SidebarCategories.Link": "Learn more",
   "SidebarTour.SidebarCategories.Title": "Sidebar categories",
-  "SiteStats.total_boards": "Total boards",
-  "SiteStats.total_cards": "Total cards",
+  "SiteStats.total_boards": "Total Boards",
+  "SiteStats.total_cards": "Total Cards",
   "TableComponent.add-icon": "Add icon",
   "TableComponent.name": "Name",
   "TableComponent.plus-new": "+ New",
@@ -342,9 +344,9 @@
   "ViewLimitDialog.Heading": "Views per board limit reached",
   "ViewLimitDialog.PrimaryButton.Title.Admin": "Upgrade",
   "ViewLimitDialog.PrimaryButton.Title.RegularUser": "Notify Admin",
-  "ViewLimitDialog.Subtext.Admin": "Upgrade to our Professional or Enterprise plan.",
+  "ViewLimitDialog.Subtext.Admin": "Upgrade to our Professional or Enterprise plan to have unlimited views per boards, unlimited cards, and more.",
   "ViewLimitDialog.Subtext.Admin.PricingPageLink": "Learn more about our plans.",
-  "ViewLimitDialog.Subtext.RegularUser": "Notify your Admin to upgrade to our Professional or Enterprise plan.",
+  "ViewLimitDialog.Subtext.RegularUser": "Notify your Admin to upgrade to our Professional or Enterprise plan to have unlimited views per boards, unlimited cards, and more.",
   "ViewLimitDialog.UpgradeImg.AltText": "upgrade image",
   "ViewLimitDialog.notifyAdmin.Success": "Your admin has been notified",
   "ViewTitle.hide-description": "hide description",
@@ -360,6 +362,9 @@
   "WelcomePage.StartUsingIt.Text": "Start using it",
   "Workspace.editing-board-template": "You're editing a board template.",
   "badge.guest": "Guest",
+  "boardPage.confirm-join-button": "Join",
+  "boardPage.confirm-join-text": "You are about to join a private board without explicitly being added by the board admin. Are you sure you wish to join this private board?",
+  "boardPage.confirm-join-title": "Join private board",
   "boardSelector.confirm-link-board": "Link board to channel",
   "boardSelector.confirm-link-board-button": "Yes, link board",
   "boardSelector.confirm-link-board-subtext": "When you link \"{boardName}\" to the channel, all members of the channel (existing and new) will be able to edit it. This excludes members who are guests. You can unlink a board from a channel at any time.",
@@ -375,10 +380,10 @@
   "centerPanel.undefined": "No {propertyName}",
   "centerPanel.unknown-user": "Unknown user",
   "cloudMessage.learn-more": "Learn more",
-  "createImageBlock.failed": "This file couldn't be uploaded as the file size limit has been reached.",
+  "createImageBlock.failed": "Unable to upload the file. File size limit reached.",
   "default-properties.badges": "Comments and description",
   "default-properties.title": "Title",
-  "error.back-to-home": "Back to home",
+  "error.back-to-home": "Back to Home",
   "error.back-to-team": "Back to team",
   "error.board-not-found": "Board not found.",
   "error.go-login": "Log in",
@@ -390,7 +395,7 @@
   "generic.previous": "Previous",
   "guest-no-board.subtitle": "You don't have access to any board in this team yet, please wait until somebody adds you to any board.",
   "guest-no-board.title": "No boards yet",
-  "imagePaste.upload-failed": "Some files weren't uploaded because the file size limit has been reached.",
+  "imagePaste.upload-failed": "Some files not uploaded. File size limit reached",
   "limitedCard.title": "Cards hidden",
   "login.log-in-button": "Log in",
   "login.log-in-title": "Log in",
@@ -410,15 +415,15 @@
   "person.add-user-to-board-confirm-button": "Add to board",
   "person.add-user-to-board-permissions": "Permissions",
   "person.add-user-to-board-question": "Do you want to add {username} to the board?",
-  "person.add-user-to-board-warning": "{username} isn't a member of the board, and won't receive any notifications about it.",
+  "person.add-user-to-board-warning": "{username} is not a member of the board, and will not receive any notifications about it.",
   "register.login-button": "or log in if you already have an account",
   "register.signup-title": "Sign up for your account",
-  "rhs-board-non-admin-msg": "You're not an admin of the board",
+  "rhs-board-non-admin-msg": "You are not an admin of the board",
   "rhs-boards.add": "Add",
   "rhs-boards.dm": "DM",
   "rhs-boards.gm": "GM",
-  "rhs-boards.header.dm": "this direct message",
-  "rhs-boards.header.gm": "this group message",
+  "rhs-boards.header.dm": "this Direct Message",
+  "rhs-boards.header.gm": "this Group Message",
   "rhs-boards.last-update-at": "Last update at: {datetime}",
   "rhs-boards.link-boards-to-channel": "Link boards to {channelName}",
   "rhs-boards.linked-boards": "Linked boards",
