--- a/webapp/playbooks/i18n/en.json
+++ b/webapp/playbooks/i18n/en.json
@@ -379,10 +379,12 @@
   "cGCoJe": "Posted by",
   "cPIKU2": "Following",
   "cUCiWw": "Become a participant",
+  "cX17EA": "Zubair testing 2nd",
   "ch4Vs1": "Request updates for playbook runs in a single click and get notified directly when an update is posted. Start a free, 30-day trial to try it out.",
   "cnfVhV": "Leave {isFollowing, select, true { and unfollow } other {}}run",
   "cp7KUI": "Playbook",
   "cpGAhx": "Are you sure you want to disable status updates for this run?",
+  "cwoCJH": "Zubair testing",
   "cyR7Kh": "Back",
   "d4g2r8": "Deleted: {timestamp}",
   "d8KvXJ": "Your trial license expires on {expiryDate}. You can purchase a license at any time through the <PortalLink>Customer Portal</PortalLink> to avoid any disruption.",
@@ -485,6 +487,7 @@
   "mLrh+0": "No due date",
   "mNgqXf": "To unlock this feature:",
   "mVpO8u": "Seen this before?",
+  "mXtet8": "Get started with Playbooks",
   "meD+1Q": "RUN PARTICIPANTS",
   "mkLeuq": "Broadcast update to selected channels",
   "mm5vL8": "Only invited members",
@@ -541,6 +544,7 @@
   "tVPYMu": "Playbook Admin",
   "tbjmvS": "A metric with the same name already exists. Please add a unique name for each metric.",
   "tqAmbk": "Runs in progress",
+  "tsX8JR": "Zubair testing",
   "twieZh": "Go to run overview",
   "u/yGzS": "{name} added @{user} to the run",
   "u4L4yd": "You have unsaved changes",
