--- a/webapp/i18n/src/translations.json
+++ b/webapp/i18n/src/translations.json
@@ -131,6 +131,9 @@
   "1prgB2": {
     "message": "Search for people"
   },
+  "1uIOie": {
+    "message": "Zubair testing 2"
+  },
   "2/2yg+": {
     "message": "Add"
   },
@@ -6256,10 +6259,6 @@
   "cUCiWw": {
     "message": "Become a participant"
   },
-  "cX17EA": {
-    "description": "Zubair testing description again",
-    "message": "Zubair testing 2nd"
-  },
   "calendar.month": {
     "message": "Month"
   },
@@ -6915,10 +6914,6 @@
   },
   "custom_status.suggestions.title": {
     "message": "SUGGESTIONS"
-  },
-  "cwoCJH": {
-    "description": "Zubair testing description",
-    "message": "Zubair testing"
   },
   "cyR7Kh": {
     "message": "Back"
@@ -11758,9 +11753,6 @@
   "trial_btn.free.tryFreeFor30Days": {
     "message": "Try free for 30 days"
   },
-  "tsX8JR": {
-    "message": "Zubair testing"
-  },
   "ttuIAE": {
     "message": "Sidebar Text"
   },
@@ -12801,6 +12793,10 @@
   "vqmRBs": {
     "message": "Confirm restart run"
   },
+  "vzk4PJ": {
+    "description": "Zubair testing description 3",
+    "message": "Zubair testing 3"
+  },
   "w0muFd": {
     "message": "Send outgoing webhook (One per line)"
   },
@@ -13192,6 +13188,10 @@
   },
   "zINlao": {
     "message": "Owner"
+  },
+  "zPWl7Q": {
+    "description": "Zubair testing description 1",
+    "message": "Zubair testing 1"
   },
   "zSOvI0": {
     "message": "Filters"
