--- a/webapp/i18n/package.json
+++ b/webapp/i18n/package.json
@@ -2,6 +2,7 @@
     "name": "i18n",
     "private": true,
     "scripts": {
+        "prei18n-extract1": "formatjs extract '../**/src/**/!(*.d).{ts,tsx,jsx}' --ignore '../**/node_modules/**' --id-interpolation-pattern '[sha512:contenthash:base64:6]' --additional-function-names '$t' --format './formatter.js' --out-file 'src/translations.json'",
         "i18n-extract1": "formatjs extract '../**/src/**/!(*.d).{ts,tsx,jsx}' --ignore '../**/node_modules/**' --id-interpolation-pattern '[sha512:contenthash:base64:6]' --additional-function-names '$t' --format simple --out-file 'src/en.json'"
     },
     "devDependencies": {
