Updated casing for add menu

--- a/webapp/channels/src/i18n/en_AU.json
+++ b/webapp/channels/src/i18n/en_AU.json
@@ -4831,7 +4831,7 @@
   "sidebar.directchannel.you": "{displayname} (you)",
   "sidebar.menu.item.notSelected": "not selected",
   "sidebar.menu.item.selected": "selected",
-  "sidebar.openDirectMessage": "Open a Direct Message",
+  "sidebar.openDirectMessage": "Open a direct message",
   "sidebar.show": "Show",
   "sidebar.sort": "Sort",
   "sidebar.sortedByRecencyLabel": "Recent activity",
@@ -4846,12 +4846,12 @@
   "sidebar.types.favorites": "FAVOURITES",
   "sidebar.types.unreads": "UNREADS",
   "sidebar.unreads": "More unreads",
-  "sidebar_left.add_channel_dropdown.browseChannels": "Browse Channels",
+  "sidebar_left.add_channel_dropdown.browseChannels": "Browse channels",
   "sidebar_left.add_channel_dropdown.browseOrCreateChannels": "Browse or create channels",
-  "sidebar_left.add_channel_dropdown.createCategory": "Create New Category",
-  "sidebar_left.add_channel_dropdown.createNewChannel": "Create New Channel",
+  "sidebar_left.add_channel_dropdown.createCategory": "Create new category",
+  "sidebar_left.add_channel_dropdown.createNewChannel": "Create new channel",
   "sidebar_left.add_channel_dropdown.dropdownAriaLabel": "Add Channel Dropdown",
-  "sidebar_left.add_channel_dropdown.invitePeople": "Invite People",
+  "sidebar_left.add_channel_dropdown.invitePeople": "Invite people",
   "sidebar_left.add_channel_dropdown.invitePeopleExtraText": "Add people to the team",
   "sidebar_left.add_channel_dropdown.work_template": "Create from a template",
   "sidebar_left.add_channel_dropdown.work_template_extra": "Link channels, boards, and playbooks together",
