--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -4855,12 +4855,12 @@
   "shortcuts.team_nav.switcher": "Navigate to a specific team:\tCtrl|Alt|[1-9]",
   "shortcuts.team_nav.switcher.mac": "Navigate to a specific team:\t⌘|⌥|[1-9]",
   "sidebar_left.add_channel_cta_dropdown.dropdownAriaLabel": "Add Channel Dropdown",
-  "sidebar_left.add_channel_dropdown.browseChannels": "Browse Channels",
+  "sidebar_left.add_channel_dropdown.browseChannels": "Browse channels",
   "sidebar_left.add_channel_dropdown.browseOrCreateChannels": "Browse or create channels",
-  "sidebar_left.add_channel_dropdown.createCategory": "Create New Category",
-  "sidebar_left.add_channel_dropdown.createNewChannel": "Create New Channel",
+  "sidebar_left.add_channel_dropdown.createCategory": "Create new category",
+  "sidebar_left.add_channel_dropdown.createNewChannel": "Create new Channel",
   "sidebar_left.add_channel_dropdown.dropdownAriaLabel": "Add Channel Dropdown",
-  "sidebar_left.add_channel_dropdown.invitePeople": "Invite People",
+  "sidebar_left.add_channel_dropdown.invitePeople": "Invite people",
   "sidebar_left.add_channel_dropdown.invitePeopleExtraText": "Add people to the team",
   "sidebar_left.add_channel_dropdown.work_template": "Create from a template",
   "sidebar_left.add_channel_dropdown.work_template_extra": "Link channels, boards, and playbooks together",
@@ -4915,7 +4915,7 @@
   "sidebar.directchannel.you": "{displayname} (you)",
   "sidebar.menu.item.notSelected": "not selected",
   "sidebar.menu.item.selected": "selected",
-  "sidebar.openDirectMessage": "Open a Direct Message",
+  "sidebar.openDirectMessage": "Open a direct message",
   "sidebar.show": "Show",
   "sidebar.sort": "Sort",
   "sidebar.sortedByRecencyLabel": "Recent activity",
