--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -1340,6 +1340,7 @@
   "admin.license.Trial": "Trial",
   "admin.license.trial-request.accept-terms": "By clicking <strong>Start trial</strong>, I agree to the <linkEvaluation>Mattermost Software and Services License Agreement</linkEvaluation>, <linkPrivacy>Privacy Policy</linkPrivacy>, and receiving product emails.",
   "admin.license.trial-request.embargoed": "We were unable to process the request due to limitations for embargoed countries. <link>Learn more in our documentation</link>, or reach out to legal@mattermost.com for questions around export limitations.",
+  "admin.license.trial-request.embargoed.button": "Close",
   "admin.license.trial-request.startTrial": "Start trial",
   "admin.license.trial-request.title": "Experience Mattermost Enterprise Edition for free for the next 30 days. No obligation to buy or credit card required. ",
   "admin.license.trialCard.contactSales": "Contact sales",
@@ -2562,6 +2563,9 @@
   "admin.webserverModeTitle": "Webserver Mode:",
   "admin.webserverModeUncompressed": "Uncompressed",
   "admin.webserverModeUncompressedDescription": "The Mattermost server will serve static files uncompressed.",
+  "air_gapped_modal.close": "Close",
+  "air_gapped_modal.description": "To start your trial, please visit {link} and request a trial key.",
+  "air_gapped_modal.title": "Request a trial key",
   "alert_banner.tooltipCloseBtn": "Close",
   "analytics.chart.loading": "Loading...",
   "analytics.chart.meaningful": "Not enough data for a meaningful representation.",
@@ -4969,11 +4973,19 @@
   "start_cloud_trial.modal.failed": "Failed",
   "start_cloud_trial.modal.gettingTrial": "Getting Trial...",
   "start_cloud_trial.modal.loaded": "Loaded!",
-  "start_trial.modal_body": "Access all platform features including advanced security and enterprise compliance.",
-  "start_trial.modal_btn.nottnow": "Not now",
-  "start_trial.modal_btn.start": "Start free 30-day trial",
+  "start_trial_form_modal.failureModal.subtitle": "There was an issue processing your trial request.",
+  "start_trial_form_modal.failureModal.subtitle2": "Please try again or contact support.",
+  "start_trial_form_modal.failureModal.title": "Please try again",
+  "start_trial_form.company_name": "Company Name",
+  "start_trial_form.company_size": "Company Size",
+  "start_trial_form.disclaimer": "By selecting Start trial, I agree to the <agreement>Mattermost Software Evaluation Agreement</agreement>, <privacypolicy>Privacy Policy</privacypolicy>, and receiving product emails.",
+  "start_trial_form.email": "Business Email",
+  "start_trial_form.invalid_business_email": "Please enter a valid business email address.",
+  "start_trial_form.modal_body": "Just a few quick items to help us tailor your trial experience",
+  "start_trial_form.modal_btn.start": "Start trial",
+  "start_trial_form.modal_title": "Start Trial",
+  "start_trial_form.name": "Name",
   "start_trial.modal_btn.start_free_trial": "Start free 30-day trial",
-  "start_trial.modal_title": "Start your free Enterprise trial now",
   "start_trial.modal.disclaimer": "By clicking “Start free 30-day trial”, I agree to the <linkEvaluation>Mattermost Software Evaluation Agreement</linkEvaluation>, <linkPrivacy>privacy policy</linkPrivacy> and receiving product emails.",
   "start_trial.modal.failed": "Failed",
   "start_trial.modal.gettingTrial": "Getting Trial...",
