Change use of 'user'/'users'/'number of users'/etc when referring to license seats to use 'seat'/'seats'/'number of seats'/etc.

--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -2575,7 +2575,7 @@
   "analytics.system.postTypes": "Posts, Files and Hashtags",
   "analytics.system.privateGroups": "Private Channels",
   "analytics.system.publicChannels": "Public Channels",
-  "analytics.system.seatsPurchased": "Total paid users",
+  "analytics.system.seatsPurchased": "Licensed Seats",
   "analytics.system.skippedIntensiveQueries": "To maximize performance, some statistics are disabled. You can <link>re-enable them in config.json</link>.",
   "analytics.system.textPosts": "Posts with Text-only",
   "analytics.system.title": "System Statistics",
@@ -4569,7 +4569,7 @@
   "pricing_modal.planSummary.free": "Increased productivity for small teams",
   "pricing_modal.planSummary.professional": "Scalable solutions for growing teams",
   "pricing_modal.price.freeForever": "Free forever",
-  "pricing_modal.rate.userPerMonth": "USD per user/month {br}<b>(billed annually)</b>",
+  "pricing_modal.rate.seatPerMonth": "USD per seat/month {br}<b>(billed annually)</b>",
   "pricing_modal.reviewDeploymentOptions": "Review deployment options",
   "pricing_modal.start_trial.disclaimer": "By selecting <span>Try free for 30 days,</span> I agree to the <linkAgreement>Mattermost Software and Services License Agreement</linkAgreement>, <linkPrivacy>Privacy Policy</linkPrivacy>, and receiving product emails.",
   "pricing_modal.subtitle": "Choose a plan to get started",
@@ -4712,7 +4712,7 @@
   "self_hosted_signup.failed_export.subtitle": "We will check things on our side and get back to you within 3 days once your license is approved. In the meantime, please feel free to continue using the free version of our product.",
   "self_hosted_signup.failed_export.title": "Your transaction is being reviewed",
   "self_hosted_signup.license_applied": "Your {planName} license has now been applied. {planName} features are now available and ready to use.",
-  "self_hosted_signup.line_item_subtotal": "{num} users × 12 mo.",
+  "self_hosted_signup.line_item_subtotal": "{num} seats × 12 mo.",
   "self_hosted_signup.organization": "Organization Name",
   "self_hosted_signup.progress_step.applying_license": "Applying your {planName} license to your Mattermost instance",
   "self_hosted_signup.progress_step.submitting_payment": "Submitting payment information",
@@ -4725,7 +4725,7 @@
   "self_hosted_signup.retry": "Try again",
   "self_hosted_signup.screening_description": "We will check things on our side and get back to you within 3 days once your license is approved. In the meantime, please feel free to continue using the free version of our product.",
   "self_hosted_signup.screening_title": "Your transaction is being reviewed",
-  "self_hosted_signup.seats": "User seats",
+  "self_hosted_signup.seats": "Seats",
   "self_hosted_signup.signup_consequences": "You will be billed today. Your license will be applied automatically. <a>See how billing works.</a>",
   "self_hosted_signup.total": "Total",
   "setting_item_max.cancel": "Cancel",
