--- a/webapp/channels/src/i18n/en_AU.json
+++ b/webapp/channels/src/i18n/en_AU.json
@@ -2572,7 +2572,7 @@
   "analytics.system.postTypes": "Posts, Files and Hashtags",
   "analytics.system.privateGroups": "Private Channels",
   "analytics.system.publicChannels": "Public Channels",
-  "analytics.system.seatsPurchased": "Total paid users",
+  "analytics.system.seatsPurchased": "Licensed Seats",
   "analytics.system.skippedIntensiveQueries": "To maximise performance, some statistics are disabled. You can <link>re-enable them in config.json</link>.",
   "analytics.system.textPosts": "Posts with Text-only",
   "analytics.system.title": "System Statistics",
@@ -4540,7 +4540,7 @@
   "pricing_modal.planSummary.professional": "Scalable solutions for growing teams",
   "pricing_modal.plan_label_trialDays": "{days} DAYS LEFT ON TRIAL",
   "pricing_modal.price.freeForever": "Free forever",
-  "pricing_modal.rate.userPerMonth": "USD per user/month {br}<b>(billed annually)</b>",
+  "pricing_modal.rate.seatPerMonth": "USD per seat/month {br}<b>(billed annually)</b>",
   "pricing_modal.reviewDeploymentOptions": "Review deployment options",
   "pricing_modal.start_trial.disclaimer": "By selecting <span>Try free for 30 days,</span> I agree to the <linkAgreement>Mattermost Software and Services Licence Agreement</linkAgreement>, <linkPrivacy>Privacy Policy</linkPrivacy> and receiving product emails.",
   "pricing_modal.subtitle": "Choose a plan to get started",
@@ -4683,7 +4683,7 @@
   "self_hosted_signup.failed_export.subtitle": "You will receive an email within 3 days to confirm the approval of your licence. In the meantime, please feel free to continue using the free version of our product.",
   "self_hosted_signup.failed_export.title": "Your transaction is being reviewed",
   "self_hosted_signup.license_applied": "Your {planName} licence has now been applied. {planName} features are now available and ready to use.",
-  "self_hosted_signup.line_item_subtotal": "{num} users × 12 months.",
+  "self_hosted_signup.line_item_subtotal": "{num} seats × 12 months.",
   "self_hosted_signup.organization": "Organisation Name",
   "self_hosted_signup.progress_step.applying_license": "Applying your {planName} licence to your Mattermost instance",
   "self_hosted_signup.progress_step.submitting_payment": "Submitting payment information",
@@ -4696,7 +4696,7 @@
   "self_hosted_signup.retry": "Try again",
   "self_hosted_signup.screening_description": "You will receive an email within 3 days to confirm the approval of your licence. In the meantime, please feel free to continue using the free version of our product.",
   "self_hosted_signup.screening_title": "Your transaction is being reviewed",
-  "self_hosted_signup.seats": "User seats",
+  "self_hosted_signup.seats": "Seats",
   "self_hosted_signup.signup_consequences": "You will be billed today. Your licence will be applied automatically. <a>See how billing works.</a>",
   "self_hosted_signup.total": "Total",
   "setting_item_max.cancel": "Cancel",
