more user/seat wording changes.

--- a/webapp/channels/src/i18n/en_AU.json
+++ b/webapp/channels/src/i18n/en_AU.json
@@ -265,10 +265,10 @@
   "admin.billing.history.allPaymentsShowHere": "All of your invoices will be shown here",
   "admin.billing.history.date": "Date",
   "admin.billing.history.description": "Description",
-  "admin.billing.history.fractionalAndRatedUsers": "{fractionalUsers} metered users, {fullUsers} users at full rate, {partialUsers} users with partial charges",
-  "admin.billing.history.fractionalUsers": "{fractionalUsers} users",
+  "admin.billing.history.fractionalAndRatedSeats": "{fractionalSeats} metered seats, {fullSeats} seats at full rate, {partialSeats} seats with partial charges",
+  "admin.billing.history.fractionalSeats": "{fractionalUsers} seats",
   "admin.billing.history.noBillingHistory": "In the future, this is where your billing history will show.",
-  "admin.billing.history.onPremUsers": "{num} users",
+  "admin.billing.history.onPremSeats": "{num} seats",
   "admin.billing.history.pageInfo": "{startRecord} - {endRecord} of {totalRecords}",
   "admin.billing.history.paid": "Paid",
   "admin.billing.history.paymentFailed": "Payment failed",
@@ -278,7 +278,7 @@
   "admin.billing.history.title": "Billing History",
   "admin.billing.history.total": "Total",
   "admin.billing.history.transactions": "Transactions",
-  "admin.billing.history.usersAndRates": "{fullUsers} users at full rate, {partialUsers} users with partial charges",
+  "admin.billing.history.seatsAndRates": "{fullSeats} seats at full rate, {partialSeats} seats with partial charges",
   "admin.billing.payment_info.add": "Add a Credit Card",
   "admin.billing.payment_info.billingAddress": "Billing Address",
   "admin.billing.payment_info.cardBrandAndDigits": "{brand} ending in {digits}",
@@ -2592,7 +2592,7 @@
   "analytics.team.activeUsers": "Active Users With Posts",
   "analytics.team.newlyCreated": "Newly Created Users",
   "analytics.team.noTeams": "This server has no teams for which to view statistics.",
-  "analytics.team.overageUsersSeats": "This exceeds total paid users",
+  "analytics.team.overageUsersSeats": "This exceeds total paid seats",
   "analytics.team.privateGroups": "Private Channels",
   "analytics.team.publicChannels": "Public Channels",
   "analytics.team.recentUsers": "Recent Active Users",
